<resources>
    <string name="app_name">RedMine</string>
    <string name="issues">Issues</string>
    <string name="projects">Projects</string>


    <string name="tracker">Tracker</string>
    <string name="number">#</string>
    <string name="status">Status</string>
    <string name="priority">Priority</string>
    <string name="subject">Subject</string>
    <string name="project">Project</string>
    <string name="author">Author</string>
    <string name="assignee">Assignee</string>
    <string name="start_date">Start date:</string>
    <string name="update_date">Last update:</string>
    <string name="done_ratio">% Done</string>
    <string name="description">Description</string>

    <string name="hint_username">username</string>
    <string name="hint_password">password</string>
    <string name="btn_sign_up">sign up</string>


    <string name="open">open</string>
    <string name="close">close</string>
    <string name="edit">Edit</string>
    <string name="create">Create Issue</string>

    <string name="settings">settings</string>
    <string name="menu_item_projects">Projects</string>
    <string name="menu_item_issues">Issues</string>
    <string name="menu_item_logout">Logout</string>

    <string name="tracker_caps">TRACKER</string>
    <string name="status_caps">STATUS</string>
    <string name="priority_caps">PRIORITY</string>
    <string name="subject_caps">SUBJECT</string>
    <string name="project_caps">PROJECT</string>
    <string name="start_date_caps">START DATE</string>
    <string name="description_caps">DESCRIPTION</string>

    <string name="tab_issues">ISSUES</string>
    <string name="tab_new_issue">NEW ISSUE</string>
    <string name="tab_activity">ACTIVITY</string>
    <string name="tab_overview">OVERVIEW</string>
    <string name="issue_tracking">Issue tracking</string>
    <string name="members">Members</string>
    <string name="cancel">Cancel</string>
    <string name="exit_question">Exit application?</string>
    <string name="exit">Exit</string>
    <string name="preferences">Preferences</string>
    <string name="connect">Connect</string>
    <string name="search">Search</string>
    <string name="ok">OK</string>
    <string name="autentication_failed">Authentication Failed!</string>
    <string name="check_input">Check the entered data.</string>
    <string name="submit_question">Submit changes?</string>
    <string name="access_denied">Access denied.</string>
    <string name="not_your_project">Your are not a member of this project.</string>


    <string-array name="tracker_array">
        <item>Feature</item>
        <item>GRP-Feature</item>
        <item>Defect</item>
        <item>QA</item>
        <item>Support</item>
        <item>Suggestion</item>
    </string-array>

    <string-array name="tracker_values">
        <item>2</item>
        <item>4</item>
        <item>1</item>
        <item>5</item>
        <item>3</item>
        <item>6</item>
    </string-array>

    <string-array name="status_array">
        <item>New</item>
        <item>In Progress</item>
        <item>On Hold</item>
        <item>Wait for Clarification</item>
        <item>Resolved</item>
        <item>Verified</item>
        <item>Closed</item>
        <item>Not Valid</item>
    </string-array>

    <string-array name="status_values">
        <item>1</item>
        <item>2</item>
        <item>7</item>
        <item>8</item>
        <item>3</item>
        <item>10</item>
        <item>5</item>
        <item>6</item>
    </string-array>


    <string-array name="priority_array">
        <item>Low</item>
        <item>Normal</item>
        <item>High</item>
        <item>Urgent</item>
        <item>Immediate</item>
    </string-array>

    <string-array name="priority_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>


    <string-array name="done_ratio_array">
        <item>0%</item>
        <item>10%</item>
        <item>20%</item>
        <item>30%</item>
        <item>40%</item>
        <item>50%</item>
        <item>60%</item>
        <item>70%</item>
        <item>80%</item>
        <item>90%</item>
        <item>100%</item>
    </string-array>

    <string-array name="done_ratio_values">
        <item>0</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
        <item>70</item>
        <item>80</item>
        <item>90</item>
        <item>100</item>
    </string-array>

</resources>
