<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/table"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center">

        <TextView
            android:id="@+id/number"
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/TabFontWhite"
            android:text="@string/number"/>
        <TextView
            android:id="@+id/tracker"
            android:layout_width="0dp"
            style="@style/TabFontWhite"
            android:layout_weight="1"
            android:text="@string/tracker_caps" />
        <TextView
            android:id="@+id/status"
            android:layout_width="0dp"
            style="@style/TabFontWhite"
            android:layout_weight="1"

            android:text="@string/status_caps" />
        <TextView
            android:id="@+id/priority"
            android:layout_width="0dp"
            style="@style/TabFontWhite"
            android:layout_weight="1"

            android:text="@string/priority_caps"/>
        <TextView
            android:id="@+id/subject"
            android:layout_width="0dp"
            style="@style/TabFontWhite"
            android:layout_weight="2"
            android:text="@string/subject_caps"/>
        <TextView
            android:id="@+id/project"
            android:layout_width="0dp"
            style="@style/TabFontWhite"
            android:layout_weight="2"
            android:text="@string/project_caps"/>
        <TextView
            android:id="@+id/start_date"
            android:layout_width="0dp"
            style="@style/TabFontWhite"
            android:layout_weight="1"
            android:text="@string/start_date_caps"/>
        <TextView
            android:id="@+id/description"
            android:layout_width="0dp"
            style="@style/TabFontWhite"
            android:layout_weight="2"
            android:text="@string/description_caps"/>

    </LinearLayout>
    <LinearLayout
        android:layout_below="@+id/table"
        android:id="@+id/line"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#c0c0c0"/>
    </LinearLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/line">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

    </android.support.v4.widget.SwipeRefreshLayout>
</RelativeLayout>