<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search_item"
        android:orderInCategory="1"
        android:icon="@drawable/ic_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView"
        android:title="@string/search" />
    <item
        android:id="@+id/settings_item"
        android:orderInCategory="2"
        android:icon="@drawable/ic_settings"
        app:showAsAction="always"
        android:title="@string/settings" />
    <item
        android:id="@+id/edit_item"
        android:orderInCategory="3"
        android:icon="@drawable/ic_edit"
        app:showAsAction="always"
        android:title="@string/edit" />

</menu>