<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/table"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="20dp">

        <TableRow>

            <TextView
                android:id="@+id/number"
                android:layout_width="0dp"
                style="@style/SubHeadFont"
                android:layout_weight="1"
                android:shrinkColumns="true"
                android:gravity="center"
                android:onClick="onClick"
                android:text="@string/number"/>
            <TextView
                android:id="@+id/tracker"
                android:layout_width="0dp"
                style="@style/SubHeadFont"
                android:layout_weight="1"
                android:shrinkColumns="true"
                android:gravity="center_horizontal|center_vertical"
                android:onClick="onClick"
                android:text="@string/tracker" />
            <TextView
                android:id="@+id/status"
                android:layout_width="0dp"
                style="@style/SubHeadFont"
                android:layout_weight="1"
                android:shrinkColumns="true"
                android:gravity="center_horizontal|center_vertical"
                android:onClick="onClick"
                android:text="@string/status" />
            <TextView
                android:id="@+id/priority"
                android:layout_width="0dp"
                style="@style/SubHeadFont"
                android:layout_weight="1"
                android:shrinkColumns="true"
                android:gravity="center"
                android:onClick="onClick"
                android:text="@string/priority"/>
            <TextView
                android:id="@+id/subject"
                android:layout_width="0dp"
                style="@style/SubHeadFont"
                android:layout_weight="3"
                android:shrinkColumns="true"
                android:gravity="center"
                android:onClick="onClick"
                android:text="@string/subject"/>
            <TextView
                android:id="@+id/project"
                android:layout_width="0dp"
                style="@style/SubHeadFont"
                android:layout_weight="2"
                android:shrinkColumns="true"
                android:gravity="center"
                android:onClick="onClick"
                android:text="@string/project"/>
            <TextView
                android:id="@+id/start_date"
                android:layout_width="0dp"
                style="@style/SubHeadFont"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="onClick"
                android:text="@string/start_date"/>
            <TextView
                android:id="@+id/description"
                android:layout_width="0dp"
                style="@style/SubHeadFont"
                android:layout_weight="2"
                android:shrinkColumns="true"
                android:gravity="center"
                android:onClick="onClick"
                android:text="@string/description"/>
        </TableRow>
    </TableLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/table">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
        />

    </android.support.v4.widget.SwipeRefreshLayout>
</RelativeLayout>