<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="8dp">

    <TextView
        android:id="@+id/edit_text"
        android:text="@string/edit"
        style="@style/HeadLineFont" />

    <TableLayout
        android:id="@+id/table_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/edit_text"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TableRow
            style="@style/TableRowSize">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                style="@style/SubHeadFont"
                android:gravity="start"
                android:text="@string/tracker" />
            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/tracker_spinner"
                android:layout_width="0dp"
                android:layout_weight="2"
                style="@style/TextFont"
                android:entries="@array/tracker_array"
                android:gravity="start" />
        </TableRow>

        <TableRow
            style="@style/TableRowSize">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                style="@style/SubHeadFont"
                android:gravity="start"
                android:text="@string/subject" />
            <EditText
                android:id="@+id/subject_text"
                android:layout_width="0dp"
                android:layout_weight="2"
                style="@style/TextFont"
                android:singleLine="true"
                android:lines="1"
                android:gravity="start" />
        </TableRow>

        <TableRow
            style="@style/TableRowSize">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                style="@style/SubHeadFont"
                android:gravity="start"
                android:text="@string/description" />
            <EditText
                android:id="@+id/description_text"
                android:layout_width="0dp"
                android:layout_weight="2"
                style="@style/TextFont"
                android:inputType="textMultiLine"
                android:lines="5"
                android:shrinkColumns="true"
                android:gravity="start" />
        </TableRow>

        <TableRow
            style="@style/TableRowSize">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                style="@style/SubHeadFont"
                android:shrinkColumns="true"
                android:gravity="start"
                android:text="@string/status" />
            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/status_spinner"
                android:layout_width="0dp"
                android:layout_weight="2"
                style="@style/TextFont"
                android:entries="@array/status_array"
                android:gravity="start" />
        </TableRow>

        <TableRow
            style="@style/TableRowSize">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                style="@style/SubHeadFont"
                android:shrinkColumns="true"
                android:gravity="start"
                android:text="@string/priority" />
            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/priority_spinner"
                android:layout_width="0dp"
                android:layout_weight="2"
                style="@style/TextFont"
                android:entries="@array/priority_array"
                android:gravity="start" />
        </TableRow>

        <TableRow
            style="@style/TableRowSize">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                style="@style/SubHeadFont"
                android:shrinkColumns="true"
                android:gravity="start"
                android:text="@string/assignee" />
            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/assignee_spinner"
                android:layout_width="0dp"
                android:layout_weight="2"
                style="@style/TextFont"
                android:gravity="start" />
        </TableRow>

        <TableRow
            style="@style/TableRowSize">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                style="@style/SubHeadFont"
                android:shrinkColumns="true"
                android:gravity="start"
                android:text="@string/start_date" />

            <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="2">

                <TextView
                    android:id="@+id/start_date_text"
                    android:layout_width="wrap_content"
                    style="@style/TextFont"
                    android:shrinkColumns="true"
                    android:gravity="start" />
                <ImageButton
                    android:id="@+id/date_picker"
                    android:layout_toRightOf="@+id/start_date_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:onClick="onClickEditFragment"
                    android:src="@drawable/ic_calendar"/>

            </RelativeLayout>
        </TableRow>

        <TableRow
            style="@style/TableRowSize">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                style="@style/SubHeadFont"
                android:shrinkColumns="true"
                android:gravity="start"
                android:text="@string/done_ratio" />
            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/done_ratio_spinner"
                android:layout_width="0dp"
                android:layout_weight="2"
                style="@style/TextFont"
                android:entries="@array/done_ratio_array"
                android:gravity="start" />
        </TableRow>
    </TableLayout>
</RelativeLayout>